# Bauer-Intelligence-Trading-System-3.2

./: .env.example  LICENSE.md  README.md  config.yaml  pyproject.toml  requirements.txt  wealth_management_program.py
bits/: __init__.py  __main__.py
bits/analytics/: __init__.py  alerts.py  terminal.py
bits/config/: settings.py
bits/data/: ingestion.py  news.py  pipeline.py  storage.py
bits/execution/: __init__.py  portfolio.py
bits/features/: __init__.py
bits/models/: __init__.py  registry.py
bits/screener/: __init__.py  export.py
bits/strategy/: __init__.py  backtester.py  risk.py
tests/: test_wealth_management_program.py
tests/bits/features/: test_features.py
tests/bits/models/: test_registry.py
tests/bits/screener/: test_screener.py
tests/bits/strategy/: test_risk.py
